auth bearer on swagger
